# libwebrtc

./: CMakeLists.txt  README.md  sync.bat  sync.py  sync.sh
cmake/: AddWebRTCTarget.cmake  PatchSources.cmake  Utils.cmake
libwebrtc/: CMakeLists.txt  LibWebRTCConfig.cmake.in  LibWebRTCTargets-debug.cmake  LibWebRTCTargets-release.cmake  LibWebRTCTargets.cmake  LibWebRTCTargets.cmake.in
